--- a/ec50.Rnw
+++ b/ec50.Rnw
@@ -26,7 +26,13 @@
 date()
 @
 
+\section{Session information}
+
 This analysis was performed in \cite{R}.
+
+<<sess>>=
+sessionInfo()
+@
 
 \bibliographystyle{plain}
 \bibliography{ec50.bib}
