--- a/latex_template.tex
+++ b/latex_template.tex
@@ -1,8 +1,10 @@
 \documentclass{article}
 % https://www.latex-project.org/about/
 \title{Cartesian closed categories and the price of eggs}
-\author{Jane Doe}
-\date{September 1994}
+%\date{September 1994}
+\date{\today}
+\author{Brian J. Knaus}
+
 \begin{document}
    \maketitle
    Hello world!
